--- a/instag/templates/all-pages/base.html
+++ b/instag/templates/all-pages/base.html
@@ -8,12 +8,17 @@
         {% else %}
            <title>instagram app</title>
         {% endif%}
-        
+        {% block styles %}
+        {% bootstrap_css %}
+      {% endblock %}
     </head>
     <body>
         {% block content%}
-            
+
         {% endblock %}
-        
+     {% block scripts %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     {% bootstrap_javascript %}
+    {% endblock %}
     </body>
 </html>
