added class comment

--- a/instag/templates/home.html
+++ b/instag/templates/home.html
@@ -1,1 +1,9 @@
-<h1>Hello everyone Welcome to mike's Instagram</h1>
+
+
+{% extends 'all-pages/base.html' %}
+
+{% block content%}
+    {{block.super}}
+    <h1>Hello everyone Welcome to mike's Instagram</h1>
+            <H1>PRESENT</H1>
+{% endblock %}
