--- a/instag/templates/all-pages/base.html
+++ b/instag/templates/all-pages/base.html
@@ -1,3 +1,6 @@
+
+{% load bootstrap3 %}
+{% load static%}
 <!DOCTYPE html>
 <html>
     <head>
@@ -9,13 +12,18 @@
            <title>instagram app</title>
         {% endif%}
         {% block styles %}
-        {% bootstrap_css %}
-      {% endblock %}
+            {% bootstrap_css %}
+            <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        {% endblock %}
     </head>
     <body>
-        {% block content%}
+        <div class="container">
+                {% include "navbar.html" %}
+                {% block content%}
 
-        {% endblock %}
+                {% endblock %}
+        </div>
+
      {% block scripts %}
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
      {% bootstrap_javascript %}
