--- a/instag/templates/all-pages/pastposts.html
+++ b/instag/templates/all-pages/pastposts.html
@@ -1,6 +1,6 @@
 {% extends 'all-pages/base.html' %}
 
 {% block content%}
-    {block.super()}
+{{block.super}}
             <h1>PAST</h1>
 {% endblock %}
