--- a/instag/templates/all-pages/posts.html
+++ b/instag/templates/all-pages/posts.html
@@ -1,6 +1,6 @@
 {% extends 'all-pages/base.html' %}
 
 {% block content%}
-    {block.super()}
+{{block.super}}
             <H1>PRESENT</H1>
 {% endblock %}
