--- a/instag/templates/all-pages/posts.html
+++ b/instag/templates/all-pages/posts.html
@@ -3,4 +3,24 @@
 {% block content%}
 {{block.super}}
             <H1>PRESENT</H1>
+            <div class="row">
+                <div class="col-md-2">
+
+                </div>
+                <div class="col-md-6">
+                        {% for instag_item in instag %}
+                        <div class="card" style="width:400px">
+                                <img class="card-img-top" src="img_avatar1.png" alt="Card image" style="width:100%">
+                                <div class="card-body">
+                                  <h4 class="card-title">John Doe</h4>
+                                  <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                                  <a href="#" class="btn btn-primary">See Profile</a>
+                                </div>
+                              </div>
+                          {% endfor %}    
+                </div>
+                <div class="col-md-4">
+
+                </div>
+            </div>
 {% endblock %}
