--- a/instag/templates/navbar.html
+++ b/instag/templates/navbar.html
@@ -16,9 +16,9 @@
                         <li><a href="/pastposts/">pastpost</a></li>
                         <li><a href="/posts/">posts</a></li>
                       </ul>
-                      <form class="navbar-form navbar-left" action="/action_page.php">
+                      <form class="navbar-form navbar-left" role="search" action="{% url 'search_results' %}">
                         <div class="input-group">
-                          <input type="text" class="form-control" placeholder="Search">
+                          <input type="text" class="form-control" placeholder="Search" name='profile' >
                           <div class="input-group-btn">
                             <button class="btn btn-default" type="submit">
                               <i class="glyphicon glyphicon-search"></i>
