--- a/instag/templates/navbar.html
+++ b/instag/templates/navbar.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         
-            <nav class="navbar navbar-inverse">
+            <nav class="">
                     <div class="container-fluid">
                       <div class="navbar-header">
                         <a class="navbar-brand" href="{% url 'home' %}">Instagram</a>
@@ -26,6 +26,13 @@
                           </div>
                         </div>
                       </form>
+                      <ul class="nav navbar-nav navbar-right" >
+                            <i class="glyphicon glyphicon-user" style="font-size:30px;"></i>
+                            <i class="glyphicon glyphicon-scale" style="font-size:30px;"></i>
+                            <i class="glyphicon glyphicon-heart" style="font-size:30px;color:grey;"></i>
+                            <i class="glyphicon glyphicon-instagram" style="font-size:30px;color:lightblue;text-shadow:2px 2px 4px #000000;"></i>
+                            
+                      </ul>
                     </div>
                   </nav>
     </body>
