added the authentication system and email

--- a/instag/templates/navbar.html
+++ b/instag/templates/navbar.html
@@ -26,6 +26,8 @@
                           </div>
                         </div>
                       </form>
+
+
                       <ul class="nav navbar-nav navbar-right" >
                             <i class="glyphicon glyphicon-user" style="font-size:30px;"></i>
                             <i class="glyphicon glyphicon-scale" style="font-size:30px;"></i>
@@ -33,6 +35,34 @@
                             <i class="glyphicon glyphicon-instagram" style="font-size:30px;color:lightblue;text-shadow:2px 2px 4px #000000;"></i>
                             
                       </ul>
+
+                      <div class="col-sm-6 col-md-6">
+                            {% if user.is_authenticated %}
+                            <ul>
+                              <li class="dropdown">
+                                <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
+                                          <span class="caret"></span>
+                                      </a>
+                                <ul class="dropdown-menu" role="menu">
+                                  <li>
+                                    <a href="{%url 'home'%}">Home</a>
+                                  </li>
+                                  <li>
+                                    <a href="/accounts/password/change">Change Password</a>
+                                  </li>
+                                  <li>
+                                    <a href="/logout">Logout</a>
+                                  </li>
+                                </ul>
+                              </li>
+                            </ul>
+                            {% else %}
+                            <li>
+                              <a class='btn btn-default' href="/accounts/login">Login</a>
+                            </li>
+                
+                            {% endif %}
+                          </div>
                     </div>
                   </nav>
     </body>
