--- a/instag/templates/all-pages/posts.html
+++ b/instag/templates/all-pages/posts.html
@@ -1,10 +1,12 @@
 {% extends 'all-pages/base.html' %}
+{% load bootstrap3 %}
 
 {% block content%}
 {{block.super}}
-            
-            
+
+
             <div class="row">
+             
                 <div class="col-md-2">
 
                 </div>
@@ -12,10 +14,14 @@
                        
                         <div class="card" style="width:600px">
                                 <img class="card-img-top" src="https://images.pexels.com/photos/1632790/pexels-photo-1632790.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Card image" style="width:100%">
-                                <div class="card-body">
+                                <i class="glyphicon glyphicon-user" style="font-size:30px;"></i>
+                                <i class="glyphicon glyphicon-scale" style="font-size:30px;"></i>
+                                <i class="glyphicon glyphicon-heart" style="font-size:30px;color:grey;"></i>
+                                <i class="glyphicon glyphicon-instagram" style="font-size:30px;color:lightblue;text-shadow:2px 2px 4px #000000;"></i>
+                                <img src="{{instag_item.profile_image.url}}" class="img-responsive" alt="Image">                                <div class="card-body">
                                   <h4 class="card-title">kenyan tree</h4>
                                   <p class="card-text">jaramogo tree</p>
-                                  <a href="#" class="btn btn-primary">See Profile</a>
+                                <a href="#" class="btn btn-primary">See Profile</a>
                                 </div>
                               </div>
                              
@@ -23,6 +29,8 @@
                 <div class="col-md-4">
 
                 </div>
+           
             </div>
-            
+           
+         
 {% endblock %}
