--- a/instag/templates/all-pages/search.html
+++ b/instag/templates/all-pages/search.html
@@ -1,9 +1,10 @@
 {%extends 'all-pages/base.html'%} 
 {% block content %}
-<div class="container">
 
+<div class="container">
+  
   <div class="row">
- {% for instag_item in instag %}
+
     {% if profile%}
       <h2>Found {{ profile|length }} of searched term {{message}}</h2>
     {% else %}
@@ -18,13 +19,14 @@
     {% for profile in profile %}
       <div class="col-sm-6 col-md-3">
           <h1>{{profile.title}}</h1>
-          <img src="{{profile_image.url}}" alt="">
+          <img src="{{photo.url}}" alt="">
           <p>{{profile.bio}}</p>
       </div>
     {% endfor %}
   {% endif %}
- {% endfor %}
+ 
 
   </div>
 </div>
+
 {% endblock %}
