--- a/instag/templates/navbar.html
+++ b/instag/templates/navbar.html
@@ -12,7 +12,7 @@
                         <a class="navbar-brand" href="{% url 'home' %}">Instagram</a>
                       </div>
                       <ul class="nav navbar-nav">
-                        <li class="active"><a href="/posts/">Home</a></li>
+                        <li class="active"><a href="/accounts/register">Home</a></li>
                         <li><a href="/pastposts/">pastpost</a></li>
                         <li><a href="/posts/">posts</a></li>
                       </ul>
@@ -36,14 +36,10 @@
                             
                       </ul>
 
-                      <div class="col-sm-6 col-md-6">
+                      
                             {% if user.is_authenticated %}
-                            <ul>
-                              <li class="dropdown">
-                                <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
-                                          <span class="caret"></span>
-                                      </a>
-                                <ul class="dropdown-menu" role="menu">
+                            <ul class="nav navbar-nav">
+                              
                                   <li>
                                     <a href="{%url 'home'%}">Home</a>
                                   </li>
@@ -62,7 +58,7 @@
                             </li>
                 
                             {% endif %}
-                          </div>
+                        
                     </div>
                   </nav>
     </body>
