--- a/instag/templates/registration/login.html
+++ b/instag/templates/registration/login.html
@@ -27,6 +27,7 @@
             <input type="hidden" name="next" value="{{next}}">
 
           </form>
+          <a href="/accounts/register/"><small>or sign Up first</small></a> 
 
         </div>
 
