--- a/instag/templates/all-pages/posts.html
+++ b/instag/templates/all-pages/posts.html
@@ -24,6 +24,17 @@
                                 <a href="#" class="btn btn-primary">See Profile</a>
                                 </div>
                               </div>
+
+                              {% for post in posts %}
+                              <div class="post">
+                                  <div class="date">
+                                      {{ post.published_date }}
+                                  </div>
+                                  <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                                  <p>{{ post.text|linebreaksbr }}</p>
+                                  <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.comments.count }}</a>
+                              </div>
+                          {% endfor %}
                              
                 </div>
                 <div class="col-md-4">
@@ -31,6 +42,6 @@
                 </div>
            
             </div>
-           
+            
          
 {% endblock %}
