--- a/instag/templates/navbar.html
+++ b/instag/templates/navbar.html
@@ -9,12 +9,12 @@
             <nav class="">
                     <div class="container-fluid">
                       <div class="navbar-header">
-                        <a class="navbar-brand" href="{% url 'home' %}">Instagram</a>
+                        <a class="navbar-brand" href="{% url 'home' %}" id="one">Instagram</a>
                       </div>
                       <ul class="nav navbar-nav">
-                        <li class="active"><a href="/accounts/register">Home</a></li>
-                        <li><a href="/pastposts/">pastpost</a></li>
-                        <li><a href="/posts/">posts</a></li>
+                        <li class="active"><a href="/accounts/register"></a></li>
+                        <li><a href="/pastposts/"></a></li>
+                        <li><a href="/posts/"></a></li>
                       </ul>
                       <form class="navbar-form navbar-left" role="search" action="{% url 'search_results' %}">
                         <div class="input-group">
@@ -41,7 +41,7 @@
                             <ul class="nav navbar-nav">
                               
                                   <li>
-                                    <a href="{%url 'home'%}">Home</a>
+                                    <a href="{%url 'home'%}"></a>
                                   </li>
                                   <li>
                                     <a href="/accounts/password/change">Change Password</a>
