--- a/instag/templates/registration/registration_form.html
+++ b/instag/templates/registration/registration_form.html
@@ -3,8 +3,11 @@
 <div class="container">
   <div class="row">
     <!-- Empty div -->
-    <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-5">
+            <img src="https://thecybersafetylady.com.au/wp-content/uploads/2018/10/Screen-Shot-2018-10-05-at-2.09.37-pm-600x900.png" alt="" height="600px" width="450px">
+
+    </div>
+    <div class="col-md-5">
       {% if form.errors %}
         <p> Some Information Might be Incorrect </p>
       {% endif %}
@@ -25,6 +28,9 @@
             <input type="hidden" name="next" value="{{next}}">
 
           </form>
+        
+              <a href="/accounts/login"> <small>login instead</small> </a>
+          
 
         </div>
 
@@ -32,7 +38,7 @@
 
     </div>
     <!-- empty div -->
-    <div class="col-md-4"></div>
+    <div class="col-md-2"></div>
   </div>
 </div>
 
