this is our readme heading

--- a/instag/templates/all-pages/posts.html
+++ b/instag/templates/all-pages/posts.html
@@ -26,7 +26,7 @@
                                 <i class="glyphicon glyphicon-scale" style="font-size:30px;"></i>
                                 <i class="glyphicon glyphicon-heart" style="font-size:30px;color:grey;"></i>
                                 <i class="glyphicon glyphicon-instagram" style="font-size:30px;color:lightblue;text-shadow:2px 2px 4px #000000;"></i>
-                                <img src="{{instag_item.profile_image.url}}" class="img-responsive" alt="Image">                                <div class="card-body">
+                              <div class="card-body">
                                   <h4 class="card-title">kenyan tree</h4>
                                   <p class="card-text">jaramogo tree</p>
                                 <a href="#" class="btn btn-primary">See Profile</a>
