--- a/instag/templates/navbar.html
+++ b/instag/templates/navbar.html
@@ -9,7 +9,7 @@
             <nav class="">
                     <div class="container-fluid">
                       <div class="navbar-header">
-                        <a class="navbar-brand" href="{% url 'home' %}" id="one">Instagram</a>
+                        <a class="navbar-brand" href="/accounts/register" id="one">Instagram</a>
                       </div>
                       <ul class="nav navbar-nav">
                         <li class="active"><a href="/accounts/register"></a></li>
