--- a/instag/templates/navbar.html
+++ b/instag/templates/navbar.html
@@ -9,12 +9,11 @@
             <nav class="">
                     <div class="container-fluid">
                       <div class="navbar-header">
-                        <a class="navbar-brand" href="/accounts/register" id="one">Instagram</a>
+                        <a class="navbar-brand" href="{url 'home'}" id="one">Instagram</a>
                       </div>
                       <ul class="nav navbar-nav">
-                        <li class="active"><a href="/accounts/register"></a></li>
-                        <li><a href="/pastposts/"></a></li>
-                        <li><a href="/posts/"></a></li>
+                        <li><a href="/profile/">profile</a></li>
+                        <li><a href="/posts/">Posts</a></li>
                       </ul>
                       <form class="navbar-form navbar-left" role="search" action="{% url 'search_results' %}">
                         <div class="input-group">
