--- a/instag/templates/all-pages/profile.html
+++ b/instag/templates/all-pages/profile.html
@@ -1,67 +1,74 @@
-{% extends 'all-pages/base.html' %}
-
-{% block content%}
+{% extends "all-pages/base.html" %}
+{% block content %}
 {{block.super}}
-           
-    {% for post in posts %}
-
-            <div class="post">
-                
-                
-               
-               
-                
-            </div>
-   
-
-    <div class="row">
+  
+<title>{{image_id.username}}</title>
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+    {%for profile in profile%}
+<img src={{profile.profile_pic.url}} style="width: 300px; height: 300px; border-radius: 50%; margin-top: 100px;margin-left: 100px ">
+<div class="well" style="float: right; margin-top: 170px; margin-right: 300px">
+<div class="">
+<h5 style="float: left; margin-left: 20px; font-size: 30px; font-weight: bold; margin-top: -1px">
+    {{profile.username}}</h5>
+<i class="fa fa-gear" style="font-size:24px; float: right;  margin-left: 30px"></i>
+<a href="{% url 'upload_profile'%}"><button class="btn btn-primary" style="background-color: #EEEEEE; color: black; float: right; margin-left: 30px; height: 30px">Edit Profile</button></a> 
+</div>
              
-            <div class="col-md-2">
+<hr>
+<div class="profile">
+<div><h4 style="float: left; margin-left: -70px">{{image_id.followers}} followers : <strong>500</h4></stong></h4></div>
+<div><h4 style="float: right;">{{image_id.following }} following : <strong>500</h4></stong></h4></div>
+<button style="margin-left: 130px; background-color:#1E88E5; width: 70px; margin-top: 10px">follow</button>
+</div>
 
-            </div>
-            <div class="col-md-6">
-                   
-                    <div class="card" style="width:600px">
-                        <div class="card-header">
-                                <div class="media">
-                                    <hr>
-                                        <img class="rounded-circle account-img" src="https://images.pexels.com/photos/1632790/pexels-photo-1632790.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" height="80px" width="80px" style="border-radius: 50px">
-                                        <div class="media-body">
-                                        <hr>
-                                        </div>
-                                      </div>
-                        </div>
-                        <img src="{{post.photo.url}}" alt="" height="600px" width="100%"> 
-                            <i class="glyphicon glyphicon-user" style="font-size:30px;"></i>
-                            <i class="glyphicon glyphicon-scale" style="font-size:30px;"></i>
-                            <i class="glyphicon glyphicon-heart" style="font-size:30px;color:grey;"></i>
-                            <i class="glyphicon glyphicon-instagram" style="font-size:30px;color:lightblue;text-shadow:2px 2px 4px #000000;"></i>                              <div class="card-body">
-                            <h3><a href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h4>
-                            <div>
-                              <p>{{ post.bio|linebreaksbr }}</p>
-                            </div>
-                              <div class="date">
-                                    {{ post.created_on }}
-                                </div>
-                               <div>
-                                <p class="article-content">{{ post.content }}</p> 
-                               </div>   
-                                <button type="button" class="{{ status}} stat" id="like"> <a href="{% url 'profile'  %}"><i
-                                  class="fa fa-heart-o  d-inline-flex icons" aria-hidden="true"><br>{{post.likes.count}}
-                                  likes</i> </a></button>
-                              <button type="button" class="{{status}} stat" id="comments" class="glyphicon glyphicon-comment"><a href="{% url 'profile'  %}">Comments: {{ post.comments.count }}</a></button>
-                            <a href="{% url 'comments'  %}" class="btn btn-primary">comment</a>
-                            </div>
-                          </div>
 
-                         
-            </div>
-            <div class="col-md-4">
+<ul>
+</div>
 
-            </div>
-       
-        </div>
+<img src="{{profile.profile.url}}" class="img-responsive" alt="">
+</ul>
+<h3>{{image_id.username}}{{image_id.image_caption}}</h3>
 
-  {% endfor %}
+{%endfor%}
+<div class="col-md-6">
+<h1>{{image_id.username}}</h1>
+<a href="{{image_id.url}}" class="profile-link">{{image_id.url}}</a></div>
+</div>
+<div class="profile-images row">
 
+ 
+
+
+</div>
+</div>
+<strong style="text-align: center; font-size: 30px">Recent posts</strong>
+<div class="row" ">
+	<div class="col-md-4">
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_OmXlEVor0bSPrK25UaK9ZW8GyAvGgXaH6JiwwsKT9LEt6ae_" style="width: 350px; height: 300px">
+</div>
+<div class="col-md-4">
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d2/20031012-002-houses-st-albans.jpg/250px-20031012-002-houses-st-albans.jpg" style="width: 350px; height: 300px">
+</div>
+<div class="col-md-4" >
+<img src="https://i.ytimg.com/vi/lIm5j9uVEKw/maxresdefault.jpg" style="width: 400px; height: 300px">
+</div>
+</div><br>
+<div class="row" ">
+	<div class="col-md-4">
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-EcfgJl7XxSmu5VwQnEGJGRT3HZsTqg4eL4xrl63Hox1h0KVs" style="width: 350px; height: 300px">
+</div>
+
+<div class="col-md-4">
+
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQqBuWipylT8wojfnEUtCkCpDZGzdXRaPYZ_F4W3kjeng_jvEDF7w" style="width: 350px; height: 300px">
+</div>
+<div class="col-md-4" >
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUosn2c1wQzsoT0qKqTseQzOTAoSQvMbtax9Awn_pmcbSasUOB" style="width: 400px; height: 300px">
+</div>
+
+</div>
+</div>
 {% endblock %}
