--- a/instag/templates/registration/login.html
+++ b/instag/templates/registration/login.html
@@ -27,7 +27,7 @@
             <input type="hidden" name="next" value="{{next}}">
 
           </form>
-          <a href="/accounts/register/"><small>or sign Up first</small></a> 
+          <a href="{% url 'registration_register' %}">Register</a>
 
         </div>
 
